<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="activity_grid_view_text">
        <item>查询</item>
        <item>盘库</item>
        <item>借书</item>
        <item>还书</item>
        <item>ISBN查</item>
        <item>设置</item>
    </string-array>

    <string name="app_name">书刊盘库</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_huizonhg">查看汇总信息</string>
    <string name="query">查询</string>
    <string name="check">盘库</string>
    <string name="borrow_books">借书</string>
    <string name="return_books">还书</string>
    <string name="isbn">条码枪查询</string>
    <string name="action_check">开始扫码</string>
    <string name="action_tip">提示</string>
    <string name="setting">设置</string>
    <string name="title_activity_book">图书信息</string>
    <string name="title_activity_check">盘库</string>
    <string name="title_activity_capture">扫码查询</string>
    <string name="title_activity_isbn">ISBN查询</string>
    <string name="title_activity_borrow_book">BorrowBookActivity</string>
    <string name="title_activity_back_book">BackBookActivity</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_check_content">CheckContentActivity</string>
    <string name="title_activity_magazine">杂志</string>
    <string name="title_activity_internal_data">内部资料</string>
    <string name="title_activity_all_check">盘库</string>
    <string name="action_new_check">新建盘库</string>
    <string name="title_activity_surplus">SurplusActivity</string>
    <string name="action_delete">删除</string>
    <string name="title_activity_summary">盘库汇总信息</string>

</resources>
