<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/activity_main_bootstrap_circle_thumbnail1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                bootstrap:bct_image="@drawable/activity_main_grid_view_item_image1"
                bootstrap:bct_size="large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/query" />

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/activity_main_bootstrap_circle_thumbnail3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                bootstrap:bct_image="@drawable/activity_main_grid_view_item_image3"
                bootstrap:bct_size="large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/borrow_books" />

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/activity_main_bootstrap_circle_thumbnail5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                bootstrap:bct_image="@drawable/activity_main_grid_view_item_image5"
                bootstrap:bct_size="large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/isbn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/activity_main_bootstrap_circle_thumbnail2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                bootstrap:bct_image="@drawable/activity_main_grid_view_item_image2"
                bootstrap:bct_size="large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/check" />

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/activity_main_bootstrap_circle_thumbnail4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                bootstrap:bct_image="@drawable/activity_main_grid_view_item_image4"
                bootstrap:bct_size="large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/return_books" />

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/activity_main_bootstrap_circle_thumbnail6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                bootstrap:bct_image="@drawable/activity_main_grid_view_item_image6"
                bootstrap:bct_size="large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/setting" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>